init manifest